# firmware-elesa

./: .gitignore  README.md  forge.config.js  multithread_pub.cpp  package-lock.json  package.json  webpack.main.config.js  webpack.rules.js
Backend/: CMakeLists.txt  main.cpp  main.js  multithread_pub  multithread_pub.cpp
Backend/controller/: express_client.js  express_controller.js
Backend/model/: express_models.js  prisma_models.prisma
Backend/routes/: express_routes.js
Frontend/: index.css  index.html  main.js  preload.js  server.js  webpack.common.js
Frontend/src/js/: App.js  index.js
Frontend/src/js/assets/: index.css
Frontend/src/js/components/: Buttons.js  ProgressBar.js  ScrollBar.js  Sidebar.js
Frontend/src/js/pages/Connections/: Connections.js
Frontend/src/js/pages/Operations/: Operations.js  StatisticBox.js
Frontend/src/js/pages/RemoteFlashing/: CustomModal.js  RemoteFlashing.js  StatisticBox.js
Frontend/src/js/pages/ZeroMQTest/: ZeroMQ.js
Frontend/src/js/styles/: StylingOutline.md  theme.js
Frontend/styles/: buttons.css  sidebar.css  theme.css
mult_thread_pubsub.dSYM/Contents/: Info.plist
mult_thread_pubsub.dSYM/Contents/Resources/DWARF/: mult_thread_pubsub
multithread_pub.dSYM/Contents/: Info.plist
multithread_pub.dSYM/Contents/Resources/DWARF/: multithread_pub
